[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Flying_Key/Key1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Flying_Key/Key2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Flying_Key/Key4.png" type="Texture" id=3]
[ext_resource path="res://Assets/Flying_Key/Key3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Flying_Key/Key5.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Itens/Key.gd" type="Script" id=6]
[ext_resource path="res://Sounds/Itens/Key/sfx_sounds_pause7_in.wav" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 16, 18, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 20, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 16, 20, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 16, 20, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 16, 20, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 13.5, 13 )

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=9]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 4 ]
}

[node name="Key" type="AnimatedSprite"]
scale = Vector2( 2, 2 )
frames = SubResource( 6 )
animation = "idle"
frame = 1
script = ExtResource( 6 )

[node name="CollectFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.5, 0 )
shape = SubResource( 7 )

[node name="KeyAnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.6
anims/RESET = SubResource( 8 )
anims/idle = SubResource( 9 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
